--- a/thesis.tex
+++ b/thesis.tex
@@ -35,6 +35,7 @@
 \usepackage{setspace}
 \usepackage[overload]{textcase}
 \usepackage{array}
+\usepackage{xspace}
 \newtheorem{theorem}{Theorem}
 \newtheorem{lemma}{Lemma}
 \newtheorem{case}{Case}[theorem]
@@ -90,6 +91,7 @@ I want to thank my adviser, John Clements, for helping me along the way.  I very
 \end{frontmatter}
 \pagestyle{plain}
 \renewcommand{\baselinestretch}{1.66}
+\input{macros.tex}
 \input{chapter-1.tex}
 \input{chapter-2.tex}
 \input{chapter-3.tex}
