--- a/model/haskell/operational-semantics/ml.tex
+++ b/model/haskell/operational-semantics/ml.tex
@@ -2,35 +2,19 @@
 \centering
 \begin{tabular}{l}
 
-% hm t (mh t e)
-
-$\mathscr{E}[\mathtt{hm}$ $t$ $(\mathtt{mh}$ $t$ $e^h)]^h\rightarrow\mathscr{E}[e^h]$ \\
-
-% hm L (ms L v)
+$\mathscr{E}[\mathtt{hm}$ $t^h$ $(\mathtt{mh}$ $t^h$ $e^h)]^h\rightarrow\mathscr{E}[e^h]$ \\
 
 $\mathscr{E}[\mathtt{hm}$ $\mathtt{L}$ $(\mathtt{ms}$ $\mathtt{L}$ $v^s)]^h\rightarrow\mathscr{E}[\mathtt{hs}$ $\mathtt{L}$ $v^s]$ \\
 
-% hm N n
-
 $\mathscr{E}[\mathtt{hm}$ $\mathtt{N}$ $\overline{n}]^h\rightarrow\mathscr{E}[\overline{n}]$ \\
-
-% hm [t] (nil t)
 
 $\mathscr{E}[\mathtt{hm}$ $[t]$ $(\mathtt{nil}$ $t)]^h\rightarrow\mathscr{E}[\mathtt{nil}$ $t]$ \\
 
-% hm [t] (cons v v)
-
 $\mathscr{E}[\mathtt{hm}$ $[t]$ $(\mathtt{cons}$ $v^m_1$ $v^m_2)]^h\rightarrow\mathscr{E}[\mathtt{cons}$ $(\mathtt{hm}$ $t$ $v^m_1)$ $(\mathtt{hm}$ $[t]$ $v^m_2)]$ \\
-
-% hm (t->t) (\x:t.e)
 
 $\mathscr{E}[\mathtt{hm}$ $(t_1\rightarrow t_2)$ $(\lambda x^m:t_1.e^m)]^h\rightarrow\mathscr{E}[\lambda x^h:t_1.\mathtt{hm}$ $t_2$ $((\lambda x^m:t_1.e^m)$ $(\mathtt{mh}$ $t_1$ $x^h))]$ \\
 
-% hm (Ax.t) (\\x.e)
-
 $\mathscr{E}[\mathtt{hm}$ $(\forall x^h.t)$ $(\Lambda x^m.e^m)]^h\rightarrow\mathscr{E}[\Lambda x^h.\mathtt{hm}$ $t$ $e^m]$ \\
-
-% hm (Ax.t) (ms (Ax.t) v)
 
 $\mathscr{E}[\mathtt{hm}$ $(\forall x^h.t)$ $(\mathtt{ms}$ $(\forall x^h.t)$ $v^s)]^h\rightarrow\mathscr{E}[\mathtt{hs}$ $(\forall x^h.t)$ $v^s]$ \\
 
