Began revising the Haskell typing rules.

--- a/model/haskell/grammar.tex
+++ b/model/haskell/grammar.tex
@@ -7,9 +7,9 @@
 
 && \expwrongs{\vartyh}{\formvar{string}} $|$ \exphm{\vartyh}{\varexpm} $|$ \exphs{\vartyh}{\varexps} \\
 
-$v^h$ & $=$ & $\lambda \varvarh:t.\varexph$ $|$ $\Lambda \varvarh.\varexph$ $|$ $\overline{n}$ $|$ $\mathtt{nil}$ $\vartyh$ $|$ $\mathtt{cons}$ $\varexph$ $\varexph$ $|$ $\mathtt{hs}$ $\tylump$ $v^s$ $|$ $\mathtt{hs}$ $(\forall \varvarh.\vartyh)$ $v^s$ \\
+$v^h$ & $=$ & $\lambda \varvarh:t.\varexph$ $|$ $\Lambda \varvarh.\varexph$ $|$ $\expnum{n}$ $|$ $\mathtt{nil}$ $\vartyh$ $|$ $\mathtt{cons}$ $\varexph$ $\varexph$ $|$ $\mathtt{hs}$ $\tylump$ $v^s$ $|$ $\mathtt{hs}$ $(\forall \varvarh.\vartyh)$ $v^s$ \\
 
-\vartyh & $=$ & \tylump $|$ \tynat $|$ \tyvarh $|$ \tylist{\tyvarh} $|$ \tylabel{\vartyh}{\tyvarh} $|$ \tyfun{\vartyh}{\vartyh} $|$ \tyfor{\tyvarh}{\vartyh} \\
+\vartyh & $=$ & \tylump $|$ \tynum $|$ \tyvarh $|$ \tylist{\tyvarh} $|$ \tylabel{\vartyh}{\tyvarh} $|$ \tyfun{\vartyh}{\vartyh} $|$ \tyfor{\tyvarh}{\vartyh} \\
 
 \formvar{\symop} & $=$ & \formsym{\symadd} $|$ \formsym{\symsub} \\
 
