--- a/macros.tex
+++ b/macros.tex
@@ -4,7 +4,10 @@
 \newcommand{\symcons}{cons}
 \newcommand{\symconu}{E}
 \newcommand{\symconf}{F}
+\newcommand{\symenv}{\Gamma}
 \newcommand{\symexp}{e}
+\newcommand{\symext}{,}
+\newcommand{\symexpty}{:}
 \newcommand{\symfield}{f}
 \newcommand{\symfix}{fix}
 \newcommand{\symhd}{hd}
@@ -14,6 +17,10 @@
 \newcommand{\symholes}{\ensuremath{[\,]\langs}\xspace}
 \newcommand{\symhs}{hs}
 \newcommand{\symif}{if0}
+\newcommand{\symjud}{\vdash}
+\newcommand{\symjudh}{\symjud\langh}
+\newcommand{\symjudm}{\symjud\langm}
+\newcommand{\symjuds}{\symjud\langs}
 \newcommand{\symlangh}{h}
 \newcommand{\symlangm}{m}
 \newcommand{\symlangs}{s}
@@ -68,7 +75,7 @@
 % Expressions
 
 \newcommand{\expfabs}[3]{\ensuremath{\lambda #1 : #2 . #3}}
-\newcommand{\exptabs}[3]{\ensuremath{\Lambda #1 . #2}}
+\newcommand{\exptabs}[2]{\ensuremath{\Lambda #1 . #2}}
 \newcommand{\expnum}[1]{\ensuremath{\formnum{#1}}}
 \newcommand{\expnil}[1]{\ensuremath{\formsym{\symnil} \; #1}}
 \newcommand{\expcons}[2]{\ensuremath{\formsym{\symcons} \; #1 \; #2}}
@@ -95,13 +102,25 @@
 % Types
 
 \newcommand{\tylump}{\ensuremath{\formsym{L}}\xspace}
-\newcommand{\tynat}{\ensuremath{\formsym{N}}\xspace}
+\newcommand{\tynum}{\ensuremath{\formsym{N}}\xspace}
 \newcommand{\tyvarh}{\ensuremath{\symvar\langh}\xspace}
 \newcommand{\tyvarm}{\ensuremath{\symvar\langm}\xspace}
 \newcommand{\tylist}[1]{\ensuremath{[#1]}\xspace}
 \newcommand{\tylabel}[2]{\ensuremath{#1 . #2}\xspace}
 \newcommand{\tyfun}[2]{\ensuremath{#1 \rightarrow #2}\xspace}
 \newcommand{\tyfor}[2]{\ensuremath{\forall #1 . #2}\xspace}
+
+% Typing rules
+
+\newcommand{\judeh}[3]{\ensuremath{#1 \symjudh #2 \symexpty #3}}
+\newcommand{\judem}[3]{\ensuremath{#1 \symjudm #2 \symexpty #3}}
+\newcommand{\judes}[3]{\ensuremath{#1 \symjuds #2 \symexpty #3}}
+\newcommand{\judth}[2]{\ensuremath{#1 \symjudh #2}}
+\newcommand{\judtm}[2]{\ensuremath{#1 \symjudm #2}}
+\newcommand{\judts}[2]{\ensuremath{#1 \symjuds #2}}
+\newcommand{\env}{\ensuremath{\symenv}}
+\newcommand{\envexte}[2]{\ensuremath{\symenv \symext #1 \symexpty #2}}
+\newcommand{\envextt}[1]{\ensuremath{\symenv \symext #1}}
 
 % Formats
 
@@ -112,12 +131,12 @@
 \newcommand{\formlang}[1]{\ensuremath{^{#1}}}
 \newcommand{\formindex}[2]{\ensuremath{#1_{#2}}}
 
-% Indices
+% Numberings
 
-\newcommand{\numa}[1]{\formindex{#1}{1}}
-\newcommand{\numb}[1]{\formindex{#1}{2}}
-\newcommand{\numc}[1]{\formindex{#1}{3}}
-\newcommand{\numi}[1]{\formindex{#1}{i}}
+\newcommand{\first}[1]{\formindex{#1}{1}}
+\newcommand{\second}[1]{\formindex{#1}{2}}
+\newcommand{\third}[1]{\formindex{#1}{3}}
+\newcommand{\ith}[1]{\formindex{#1}{i}}
 
 % Miscellaneous
 
