--- a/model/haskell/operational-semantics/haskell.tex
+++ b/model/haskell/operational-semantics/haskell.tex
@@ -2,33 +2,71 @@
 \centering
 \begin{tabular}{l}
 
-$\mathscr{E}[(\lambda x^h:t^h.e^h_1)$ $e^h_2]^h\rightarrow\mathscr{E}[e^h_1[e^h_2/x^h]]$ \\
+% Function application
 
-$\mathscr{E}[(\Lambda x^h.e^h)$ $\lbrace t^h\rbrace]^h\rightarrow\mathscr{E}[e^h[t^h/x^h]]$ \\
+\redruleh
+{\expfapp{(\expfabs{\varvarh}{\vartyh}{\first{\varexph}})}{\second{\varexph}}}
+{\expsubst{\first{\varexph}}{\second{\varexph}}{\varvarh}} \\
 
-$\mathscr{E}[\mathtt{fix}$ $(\lambda x^h:t^h.e^h)]^h\rightarrow\mathscr{E}[e^h[(\mathtt{fix}$ $(\lambda x^h:t^h.e^h))/x^h]]$ \\
+% Type application
 
-$\mathscr{E}[+$ $\overline{n_1}$ $\overline{n_2}]^h\rightarrow\mathscr{E}[\overline{n_1+n_2}]$ \\
+\redruleh
+{\exptapp{(\exptabs{\tyvarh}{\varexph})}{\vartyh}}
+{\expsubst{\varexph}{\vartyh}{\tyvarh}} \\
 
-$\mathscr{E}[-$ $\overline{n_1}$ $\overline{n_2}]^h\rightarrow\mathscr{E}[\overline{max(n_1-n_2,0)}]$ \\
+% Fix
 
-$\mathscr{E}[\mathtt{if0}$ $\overline{0}$ $e^h_1$ $e^h_2]^h\rightarrow\mathscr{E}[e^h_1]$ \\
+\redruleh
+{\expfix{(\expfabs{\varvarh}{\vartyh}{\varexph})}}
+{\expsubst{\varexph}{\expfix{(\expfabs{\varvarh}{\vartyh}{\varexph})}}{\varvarh}} \\
 
-$\mathscr{E}[\mathtt{if0}$ $\overline{n}$ $e^h_1$ $e^h_2]^h\rightarrow\mathscr{E}[e^h_2]$ $(n\neq0)$ \\
+% Add
 
-$\mathscr{E}[\mathtt{hd}$ $(\mathtt{nil}$ $t^h)]^h\rightarrow\mathscr{E}[\mathtt{wrong}$ $t^h$ \str{Empty\;list}$]$ \\
+\redruleh
+{\expadd{\first{\expnum{\varnum}}}{\second{\expnum{\varnum}}}}
+{\expnum{\first{\varnum} + \second{\varnum}}} \\
 
-$\mathscr{E}[\mathtt{tl}$ $(\mathtt{nil}$ $t^h)]^h\rightarrow\mathscr{E}[\mathtt{wrong}$ $[t^h]$ ``Empty list"$]$ \\
+% Subtract
 
-$\mathscr{E}[\mathtt{hd}$ $(\mathtt{cons}$ $e^h_1$ $e^h_2)]^h\rightarrow\mathscr{E}[e^h_1]$ \\
+\redruleh
+{\expsub{\first{\expnum{\varnum}}}{\second{\expnum{\varnum}}}}
+{\expnum{\formvar{max}(\first{\varnum} - \second{\varnum}, 0)}} \\
 
-$\mathscr{E}[\mathtt{tl}$ $(\mathtt{cons}$ $e^h_1$ $e^h_2)]^h\rightarrow\mathscr{E}[e^h_2]$ \\
+% If0 true
 
-$\mathscr{E}[\mathtt{null?}$ $(\mathtt{nil}$ $t^h)]^h\rightarrow\mathscr{E}[\overline{0}]$ \\
+$\varconm[\mathtt{if0}$ $\overline{0}$ $e^h_1$ $e^h_2]^h\rightarrow\varconm[e^h_1]$ \\
 
-$\mathscr{E}[\mathtt{null?}$ $(\mathtt{cons}$ $e^h_1$ $e^h_2)]^h\rightarrow\mathscr{E}[\overline{1}]$ \\
+% If0 false
 
-$\mathscr{E}[\mathtt{wrong}$ $t^h$ string$]^h\rightarrow$ \textbf{Error}: string
+$\varconm[\mathtt{if0}$ $\overline{n}$ $e^h_1$ $e^h_2]^h\rightarrow\varconm[e^h_2]$ $(n\neq0)$ \\
+
+% Head nil
+
+$\varconm[\mathtt{hd}$ $(\mathtt{nil}$ $t^h)]^h\rightarrow\varconm[\mathtt{wrong}$ $t^h$ \str{Empty\;list}$]$ \\
+
+% Tail nil
+
+$\varconm[\mathtt{tl}$ $(\mathtt{nil}$ $t^h)]^h\rightarrow\varconm[\mathtt{wrong}$ $[t^h]$ ``Empty list"$]$ \\
+
+% Head cons
+
+$\varconm[\mathtt{hd}$ $(\mathtt{cons}$ $e^h_1$ $e^h_2)]^h\rightarrow\varconm[e^h_1]$ \\
+
+% Tail cons
+
+$\varconm[\mathtt{tl}$ $(\mathtt{cons}$ $e^h_1$ $e^h_2)]^h\rightarrow\varconm[e^h_2]$ \\
+
+% Null nil
+
+$\varconm[\mathtt{null?}$ $(\mathtt{nil}$ $t^h)]^h\rightarrow\varconm[\overline{0}]$ \\
+
+% Null cons
+
+$\varconm[\mathtt{null?}$ $(\mathtt{cons}$ $e^h_1$ $e^h_2)]^h\rightarrow\varconm[\overline{1}]$ \\
+
+% Wrong
+
+$\varconm[\mathtt{wrong}$ $t^h$ string$]^h\rightarrow$ \textbf{Error}: string
 
 \end{tabular}
 \caption{Haskell operational semantics}
