--- a/model/haskell/grammar.tex
+++ b/model/haskell/grammar.tex
@@ -3,7 +3,7 @@
 
 \begin{tabular}{rcl}
 
-\varexph & $=$ & \varvarh $|$ \varvaluh $|$ \expfapp{\varexph}{\varexph} $|$ \exptapp{\varexph}{\vartyh} $|$ \expfix{\varexph} $|$ \expop{\varexph}{\varexph} $|$ \expifzero{\varexph}{\varexph}{\varexph} $|$ \expfield{\varexph} $|$ \expnull{\varexph} \\
+\varexph & $=$ & \varvarh $|$ \varvaluh $|$ \expfapp{\varexph}{\varexph} $|$ \exptapp{\varexph}{\vartyh} $|$ \expfix{\varexph} $|$ \expop{\varexph}{\varexph} $|$ \expif{\varexph}{\varexph}{\varexph} $|$ \expfield{\varexph} $|$ \expnull{\varexph} \\
 
 && \expwrongs{\vartyh}{\formvar{string}} $|$ \exphm{\vartyh}{\varexpm} $|$ \exphs{\vartyh}{\varexps} \\
 
@@ -15,7 +15,7 @@ $v^h$ & $=$ & $\lambda \varvarh:t.\varexph$ $|$ $\Lambda \varvarh.\varexph$ $|$ 
 
 \formvar{\symfield} & $=$ & \formsym{\symhd} $|$ \formsym{\symtl} \\
 
-\varconuh & $=$ & \symholeh $|$ \expfapp{\varconuh}{\varexph} $|$ \exptapp{\varconuh}{\vartyh} $|$ \expfix{\varconuh} $|$ \expop{\varconuh}{\varexph} $|$ \expop{\varvaluh}{\varconuh} $|$ \expifzero{\varconuh}{\varexph}{\varexph} \\
+\varconuh & $=$ & \symholeh $|$ \expfapp{\varconuh}{\varexph} $|$ \exptapp{\varconuh}{\vartyh} $|$ \expfix{\varconuh} $|$ \expop{\varconuh}{\varexph} $|$ \expop{\varvaluh}{\varconuh} $|$ \expif{\varconuh}{\varexph}{\varexph} \\
 
 && \expfield{\varconuh} $|$ \expnull{\varconuh} $|$ \exphm{\vartyh}{\varconum} $|$ \exphs{\vartyh}{\varconus}
 
