--- a/model/haskell/operational-semantics/haskell.tex
+++ b/model/haskell/operational-semantics/haskell.tex
@@ -34,6 +34,8 @@
 
 % If0 true
 
+%\redruleh
+%{\expifz
 $\varconm[\mathtt{if0}$ $\overline{0}$ $e^h_1$ $e^h_2]^h\rightarrow\varconm[e^h_1]$ \\
 
 % If0 false
