--- a/model/haskell/typing-rules.tex
+++ b/model/haskell/typing-rules.tex
@@ -111,7 +111,7 @@
 % If0
 \frac
 {\judeh{\env}{\first{\varexph}}{\tynum} \quad \judeh{\env}{\second{\varexph}}{\vartyh} \quad \judeh{\env}{\third{\varexph}}{\vartyh}}
-{\judeh{\env}{\expifzero{\first{\varexph}}{\second{\varexph}}{\third{\varexph}}}{\vartyh}}
+{\judeh{\env}{\expif{\first{\varexph}}{\second{\varexph}}{\third{\varexph}}}{\vartyh}}
 \quad
 % Wrong
 \frac
