Revised the HM op sem to use the macros. Bug fix in macros.

--- a/macros.tex
+++ b/macros.tex
@@ -153,7 +153,7 @@
 \newcommand{\formsym}[1]{\ensuremath{\mathtt{#1}}}
 \newcommand{\formnum}[1]{\ensuremath{\overline{#1}}}
 \newcommand{\formstr}[1]{\ensuremath{\mathrm{#1}}}
-\newcommand{\formlang}[1]{\ensuremath{\mathit{^{#1}}}}
+\newcommand{\formlang}[1]{\ensuremath{^{\mathit{#1}}}}
 \newcommand{\formindex}[2]{\ensuremath{#1_{#2}}}
 
 % Numberings
